objects/AccountContactRelation.object
<CustomObject>
    <fields>
        <fullName>Account_Record_Type__c</fullName>
        <formula>Account.RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Title__c</fullName>
        <description>The account title selected for the contact with explicit regards to the individual relationship</description>
        <label>Account Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CategoryId__c</fullName>
        <label>CategoryId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Point_of_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to hold true for notification point of contact</description>
        <label>Notification Point of Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship_Strength__c</fullName>
        <label>Relationship Strength</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strong</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Weak</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tech_Contact_Created_Date__c</fullName>
        <description>Holds the contact Created Date and is being used in the Flow</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Tech_Contact_Status__c</fullName>
        <description>Holds the contact status and is being used in the Flow</description>
        <formula>Text(Contact.Contact_Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of relationship the user has to the account or the location</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>System</fullName>
                </value>
                <value>
                    <fullName>Vendor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>